[package]
name = "tic-tac-rust"
version = "0.1.3"
authors = ["Tarik <tarikishaq@hotmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/tarikeshaq/tic-tac-rust"
repository = "https://github.com/tarikeshaq/tic-tac-rust"
readme = "README.md"
exclude = [".gitignore", ".github/**"]
documentation = "https://docs.rs/tic-tac-rust"
description = "Tic tac toe game in rust! This is the library, it can be run from a Rust CLI or from wasm!"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

